fix: (CXSPA-9045) Button_ Contrast issue in high contrast themes for Focus.
 * closes https://jira.tools.sap/browse/CXSPA-9045

--- a/projects/storefrontstyles/scss/cxbase/blocks/buttons.scss
+++ b/projects/storefrontstyles/scss/cxbase/blocks/buttons.scss
@@ -339,12 +339,10 @@ button,
 }
 
 // override opacity of bootstrap .close class
-button {
-  &.close:not(:disabled):not(.disabled) {
+button.close:not(:disabled):not(.disabled) {
     @include forFeature('a11yImproveContrast') {
       &:focus {
         opacity: 1;
       }
     }
-  }
 }
